Add expense added

--- a/split/templates/split/group.html
+++ b/split/templates/split/group.html
@@ -20,4 +20,5 @@
 {% endfor %}</p>
 
 
-<a href = "/split/add_record/"> ADD RECORD </a> 
+<a href = "/split/add_expense/{{ group.id }}"> ADD DELETE EXPENSE </a> 
+<a href = "/split/delete_expense/{{ group.id }}"> DELETE EXPENSE </a> 
