GroupProfile independent from Groups

--- a/split/templates/split/group.html
+++ b/split/templates/split/group.html
@@ -1,5 +1,5 @@
-<p>group name:  {{ group.group.name }} </p>
-<p>date created: {{ group.date_createsd }} </p>
+<p>group name:  {{ group.name }} </p>
+<p>date created: {{ group.date_created }} </p>
 <p>owner: {{ group.user_created }} </p>
 <p>members: 
 {% for m in members %}
