--- a/split/templates/split/group.html
+++ b/split/templates/split/group.html
@@ -21,4 +21,5 @@
 
 
 <a href = "/split/add_expense/{{ group.id }}"> ADD EXPENSE </a>   <br>
-<a href = "/split/delete_expense/{{ group.id }}"> DELETE EXPENSE </a> 
+<a href = "/split/delete_expense/{{ group.id }}"> DELETE EXPENSE </a> <br>
+<a href = "/split/add_member/{{ group.id }}"> ADD MEMBER </a> <br>
