--- a/split/templates/split/create_group.html
+++ b/split/templates/split/create_group.html
@@ -1,6 +1,39 @@
-<form action="/split/creating/" method="post">
-    {% csrf_token %}
-      <input type="text" name="name"  value="Group Name" />
-      <input type="text" name="description"  value="Group description" />
-      <input type="submit" value="Submit" />a
-</form>
+{% extends 'split/base.html' %}
+{% load static %}
+{% block overview %}
+
+<div class="col-lg-6">
+  <section class="panel">
+    <header class="panel-heading">
+      Create New Group
+    </header>
+    <div class="panel-body">
+      <form role="form" action="/split/creating/" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="exampleInputEmail1">Group Name</label>
+          <input type="text" class="form-control" name="name" placeholder="Enter group name">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Description</label>
+          <input type="text" class="form-control" name="description" placeholder="Description">
+        </div>
+        <!--<div class="form-group">
+          <label for="exampleInputFile">File input</label>
+          <input type="file" id="exampleInputFile">
+          <p class="help-block">Example block-level help text here.</p>
+        </div>
+        <div class="checkbox">
+          <label>
+                                <input type="checkbox"> Check me out
+                            </label>
+        </div>-->
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+    </div>
+  </section>
+</div>
+
+
+{% endblock %}
