--- a/split/templates/split/sign_up.html
+++ b/split/templates/split/sign_up.html
@@ -1,3 +1,92 @@
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Split Wise">
+  <meta name="author" content="GeeksLabs">
+  <meta name="keyword" content="SPlit, Wise, Expense, Tracker">
+  <link rel="shortcut icon" href="img/favicon.png">
+
+  <title>LOGIN | Split Wise</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="{% static 'split/css/bootstrap.min.css' %}" rel="stylesheet">
+  <!-- bootstrap theme -->
+  <link href="{% static 'split/css/bootstrap-theme.css' %}" rel="stylesheet">
+  <!--external css-->
+  <!-- font icon -->
+  <link href="{% static 'split/css/elegant-icons-style.css' %}" rel="stylesheet" />
+  <link href="{% static 'split/css/font-awesome.css' %}" rel="stylesheet" />
+  <!-- Custom styles -->
+  <link href="{% static 'split/css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'split/css/style-responsive.css' %}" rel="stylesheet" />
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- =======================================================
+      Theme Name: NiceAdmin
+      Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+      Author: BootstrapMade
+      Author URL: https://bootstrapmade.com
+    ======================================================= -->
+</head>
+
+<body class="login-img3-body">
+
+  <div class="container">
+    {% if form.errors %}
+      <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+
+    <form class="login-form" method = "post" action="/split/signing_up/">
+      {% csrf_token %} 
+      <div class="login-wrap">
+        <p class="login-img"><i class="icon_lock_alt"></i></p>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" class="form-control" name="username" placeholder="Username" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" class="form-control" name="fname" placeholder="First name" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" class="form-control" name="lname" placeholder="Last name" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+          <input type="password" class="form-control" name="pwd" placeholder="Password">
+        </div>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Sign Up</button>
+        </div>
+      </form>
+    
+  </div>
+
+
+</body>
+
+</html>
+
+<!---
+{# Assumes you setup the password_reset view in your URLconf #}
+<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+-->
+
+
 <form action="/split/signing_up/" method="post">
     {% csrf_token %}
       <input type="text" name="username"  value="User Name" />
@@ -7,3 +96,5 @@
       <input type="password" name="pwd"  value="Password" />
       <input type="submit" value="Submit" />a
 </form>
+
+
