Change sign up button action

--- a/split/templates/registration/login.html
+++ b/split/templates/registration/login.html
@@ -64,11 +64,12 @@
         </label>
         <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
         </div>
+        <div class="login-wrap">  
+          <button class="btn btn-info btn-lg btn-block" formaction="/split/sign_up/">Signup</button></a>
+        </div>
       </form>
     
-    <div class="login-wrap">  
-      <a href="/split/sign_up/ " ><button class="btn btn-info btn-lg btn-block" >Signup</button></a>
-    </div>
+    
   </div>
 
 
